# McPulse

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/routers/: analyses.py  auth.py  stripe_payments.py  websocket.py
backend/app/services/: encryption.py  icp_engine.py  stripe_service.py
backend/supabase/: schema.sql
frontend/: .env.local.example  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/landing/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/report/[id]/: page.tsx
frontend/components/: PricingCard.tsx  TypingHeadline.tsx
frontend/lib/: api.ts  store.ts
