[tool.poetry]
name = "mcpulse-backend"
version = "0.1.0"
description = "MCPulse FastAPI backend"
authors = ["MCPulse Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
supabase = "^2.3.0"
openai = "^1.10.0"
stripe = "^7.10.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^41.0.7"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
websockets = "^12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
